correction ligne invisible

--- a/src/app/preface/preface.component.scss
+++ b/src/app/preface/preface.component.scss
@@ -47,7 +47,7 @@
 .ornament-line {
   display: block;
   flex: 1;
-  height: 0.5px;
+  height: 1px;
   background: var(--gold);
   max-width: 48px;
 }
